tests/suite/fail/generated/types/fail_div_bool_string.ny
fn main() {
    let _ = true / "a" //~ ERROR Type mismatch in arithmetic
}
